# fetch-vr

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/files/: .bashrc  .inputrc  .vimrc
docker/: Dockerfile  Makefile  README.md  build.sh  ros_entrypoint.sh  run.sh
docker/files/: .bashrc
docker/files/.config/: starship.toml
docker/files/.ignition/fuel/: config.yaml
ros/: .gitignore  README.md
ros/aruco_msgs/: CMakeLists.txt  package.xml
ros/calibrate_modify_contrast/: CMakeLists.txt  package.xml
ros/calibrate_modify_contrast/src/: contrast_augmenter.cpp
ros/fetch_vr/: CMakeLists.txt  package.xml
ros/fetch_vr/launch/: aruco_marker_publisher.launch  example.launch  external_camera_publisher.launch  fetch_vr.launch  marker_publisher.launch  move_group.launch  old.launch  planning_scene.launch  point_cloud_publisher.launch  scott.launch  tcp_endpoint.launch  unity_tcp_endpoint.launch
ros/fetch_vr/msg/: ExampleMessage.msg
ros/fetch_vr/script/: example.py
ros/fetch_vr/scripts/: aruco_init_moveit.py  aruco_marker_transform_publisher.py  assemble_clouds.py  camera_transform_publisher.py  lib_cloud_conversion_between_Open3D_and_ROS.py  marker_transform_publisher.py  marker_transform_publisher_old.py  open3d_ros_helper.py  planning_scene.py  segment_point_cloud_publisher.py  segmentation.py  setup_planning_scene.py  transform_point_cloud.py  world_publisher.py
ros/fetch_vr/src/: concatenate_clouds.cpp
ros/fetch_vr/srv/: ExampleService.srv
unity/: .gitignore  README.md
unity/Assets/: msgbrowser_settings.asset
unity/Assets/BigFurniturePack/Prefabs/Tables/: kitchen_table_2.prefab
unity/Assets/Fetch VR/Materials/: Ground.mat  Left Marker.mat  Marker.mat  Right Marker.mat  Wood.mat
unity/Assets/Fetch VR/Prefabs/: Fetch.prefab  Gripper.prefab  Left Marker.prefab
unity/Assets/Fetch VR/Scenes/: Fetch VR.unity
unity/Assets/Fetch VR/Scripts/Behaviours/: ArucoPositionSubscriber.cs  CompressedImageViewer.cs  ImmovableArticulationBody.cs  JointTrajectorySubscriber.cs  MoveGroupController.cs  PosePublisher.cs  ShowChildren.cs  TintMaterial.cs  (+2 more)
unity/Assets/Materials/: Gray.mat  Marker.mat
unity/Assets/Oculus/: OculusProjectConfig.asset
unity/Assets/Prefabs/: Axis.prefab  Fetch.prefab  ROSConnection.prefab  ROSConnectionPrefab.prefab
unity/Assets/Resources/: OVRPlatformToolSettings.asset  OculusPlatformSettings.asset  ROSConnectionPrefab.prefab
unity/Assets/Scenes/: Fetch VR.unity  SampleScene.unity
unity/Assets/Scripts/: BoundingBoxSubscriber.cs  ImmovableArticulationBody.cs  JointSleeper.cs  JointSubscriber.cs  JointTrajectoryAnimator.cs  JointTrajectorySubscriber.cs  MaterialExtensions.cs  PosePublisher.cs  ROSExtensions.cs  ROSTime.cs  SetColor.cs  SimpleActionClient.cs  Tint.cs  TransformSubscriber.cs
unity/Assets/Scripts/ActionClient/: ActionClient.cs  ActionClientException.cs  ActionClientGoal.cs  GoalState.cs  GoalStatus.cs
unity/Assets/Scripts/Behaviours/: ArucoPositionSubscriber.cs  BoundingBoxSubscriber.cs  ImmovableArticulationBody.cs  JointStateSubscriber.cs  MoveGroupController.cs  TransformSubscriber.cs
unity/Assets/Scripts/Robotics/: ROSActionClient.cs  ROSActionFeedback.cs  ROSActionResult.cs
unity/Assets/TextMesh Pro/Resources/: TMP Settings.asset
unity/Assets/XR/: XRGeneralSettings.asset
unity/ProjectSettings/: DynamicsManager.asset  EditorBuildSettings.asset  Physics2DSettings.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
(+247 files in other folders)
